--- a/templates/brain_tumor.html
+++ b/templates/brain_tumor.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <title>Brain Tumor Detection</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="../static/js/doctor_map.js"></script>
 
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
