--- a/templates/fatty_liver.html
+++ b/templates/fatty_liver.html
@@ -322,7 +322,7 @@
           resultTable.style.display = "block";
 
           const prediction = data.prediction
-          if (prediction.toLowerCase().includes("positive")) {
+          if (prediction.toLowerCase().includes("severe illness")) {
             document.getElementById("doctorBtn").style.display = "inline-block";
 
             const currentDisease = "Fatty Liver";
