--- a/templates/login.html
+++ b/templates/login.html
@@ -481,7 +481,7 @@
 
                 <div class="form-options" data-aos="fade-up" data-aos-delay="500">
                     <div class="form-check">
-                        <input type="checkbox" class="form-check-input" id="rememberMe" name="rememberMe">
+                        <input type="checkbox" class="form-check-input" id="rememberMe" name="remember">
                         <label class="form-check-label" for="rememberMe">Remember me</label>
                     </div>
                     <a href="/forgot-password">Forgot Password?</a>
